first attempt at fixing button mobile issue, more small proj fixes

--- a/css/style.css
+++ b/css/style.css
@@ -296,26 +296,26 @@ footer {
 
 
 a.proj-button {
-    background: #035AA6;
     border-radius: 50px;
-    box-shadow: #035AA6 0 10px 10px -10px;
-    box-sizing: border-box;
     color: #FFFFFF !important; 
-    cursor: pointer;
-    font-size: 16px;
+    background: #035AA6;
+    box-shadow: #035AA6 0 10px 10px -10px;
     font-weight: 700;
     line-height: 24px;
-    opacity: 1;
-    outline: 0 solid transparent;
-    padding: 8px 18px 10px;
+
+    padding: 10px 20px;
+    border: 0;
+    width: fit-content;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+
+    cursor: pointer;
+    touch-action: manipulation;
+
+    word-break: break-word;
     user-select: none;
     -webkit-user-select: none;
-    touch-action: manipulation;
-    width: fit-content;
-    word-break: break-word;
-    border: 0;
-    margin-bottom: 20px;
-  }
+}
 
 .proj-button:hover{
     background: #223A59;
@@ -323,10 +323,6 @@ a.proj-button {
 
 .button-flex{
     margin-bottom: 25px;
-}
-
-.button-flex .proj-button{
-    margin-right: 5px;
 }
 
 
@@ -349,6 +345,16 @@ a.proj-button {
     margin-bottom: 0px;
 }
 
+/* fixing button issue on mobile (i hope) */
+@media screen and (max-width: 443px) {
+
+    .button-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
 
 
 
